Exibindo dados do BD

--- a/views/formulario.handlebars
+++ b/views/formulario.handlebars
@@ -1,4 +1,4 @@
-<form action="">
+<form action="/add" method="POST">
     <p>Título: </p><input type="text" name="titulo"/>
     <p>Conteúdo: </p><textarea name="conteudo"></textarea>
     <button type="submit">Cadastrar postagem</button>
